# Haineko

./: .gitignore  .travis.yml  Changes  Haineko.mk  LICENSE  META.json  Makefile  Makefile.am  Makefile.in  README-JA.md  README.md  bootstrap  configure  configure.ac  cpanfile
eg/: Sendmail.java  email-01.json  email-02.json  sendmail.html  sendmail.php  sendmail.pl  sendmail.py  sendmail.rb  sendmail.sh
etc/: Makefile.am  Makefile.in  authinfo  haineko.cf  haineko.cf-example  hypnotoad.cf  hypnotoad.cf-example  mailertable  mailertable-example  password-example  recipients  relayhosts  sendermt  sendermt-example
lib/: Haineko.pm  Makefile.am  Makefile.in
lib/Haineko/: Address.pm  CLI.pm  DNS.pm  Data.pm  Default.pm  E.pm  Example.pm  Greeting.pm  HTTPD.pm  JSON.pm  Log.pm  Makefile.am  Makefile.in  Milter.pm  RFC5321.pm  RFC5322.pm  Relay.pm  Response.pm  Root.pm  Sample.pm  Sendmail.pm  Session.pm
lib/Haineko/CLI/: Daemon.pm  Help.pm  Makefile.am  Password.pm  Setup.pm
lib/Haineko/CLI/Setup/: Data.pm
lib/Haineko/Ctrl/: Makefile.am  Makefile.in  Submit.pm
lib/Haineko/HTTPD/: Auth.pm  Makefile.am  Request.pm  Response.pm  Router.pm
lib/Haineko/Milter/: Example.pm  Makefile.am
lib/Haineko/Relay/: AmazonSES.pm  Discard.pm  ESMTP.pm  Makefile.am  Makefile.in  SendGrid.pm
lib/Haineko/SMTPD/: Address.pm  Greeting.pm  Milter.pm  RFC5321.pm  RFC5322.pm  Relay.pm  Response.pm  Session.pm
lib/Haineko/SMTPD/Milter/: Example.pm  Nyaa.pm
lib/Haineko/SMTPD/Relay/: AmazonSES.pm  Discard.pm  ESMTP.pm  File.pm  Haineko.pm  MX.pm  Makefile.am  Mandrill.pm  Screen.pm  SendGrid.pm
libexec/: haineko.psgi
sbin/: Makefile.am  Makefile.in  hainekod
script/: Makefile.am  Makefile.in  haineko
t/: 000_basic.t  010-ctrl-submit.t  010-sendmail.t  013-root-conf.t  100-address.t  100-smtpd-address.t  101-greeting.t  101-smtpd-greeting.t  110-rfc5321.t  110-smtpd-rfc5321.t  111-rfc5322.t  111-smtpd-rfc5322.t  112-log.t  113-default.t  114-json.t  115-e.t  116-dns.t  120-relay.t  120-smtpd-relay.t  121-relay-esmtp.t  121-smtpd-relay-esmtp.t  122-relay-sendgrid.t  122-smtpd-relay-sendgrid.t  123-relay-discard.t  123-smtpd-relay-discard.t  124-relay-amazonses.t  124-smtpd-relay-amazonses.t  125-smtpd-relay-mandrill.t  126-smtpd-relay-haineko.t  127-smtpd-relay-mx.t  130-response.t  130-smtpd-response.t  131-session.t  131-smtpd-session.t  140-milter.t  140-smtpd-milter.t  141-milter-example.t  141-smtpd-milter-example.t  160-smtpd-response.t  300-cli.t  (+5 more)
xt/: 001-used-modules.t  002-http-get.t  003-sendmail.t  004-synopsis.t
